# SelfLearningLM

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
backend/app/: config.py  crawl_tracker.py  database.py  main.py
backend/app/models/: container.py  crawl_session.py  dead_letter.py  record.py
backend/app/routers/: analysis.py  containers.py  crawls.py  dashboard.py  datasets.py  dead_letter.py  exports.py  process.py  proxies.py  records.py  sources.py  training.py  validation.py
backend/app/schemas/: container.py  crawl.py  proxy.py  record.py
backend/app/seed/: __init__.py  container_seeds.py
backend/app/services/: container_service.py  proxy_service.py
backend/cli/: app.py
backend/crawler/: engine.py  middleware.py
backend/crawler/evasion/: captcha_handler.py  fingerprint.py  honeypot_detector.py  proxy_rotator.py  state_machine.py  waf_bypass.py
backend/crawler/pipelines/: raw_storage.py
backend/crawler/spiders/: generic_spider.py
backend/exporter/: __init__.py  jsonl.py
backend/processor/: analyzer.py  cleanup.py  content_extractor.py  deduplicator.py  pipeline.py  qualifier.py  refiner.py  storage_writer.py  training_formatter.py  wordfixes.json
backend/processor/extractors/: __init__.py  dynamic_content.py  (+4 more)
backend/storage/: lake.py
config/: proxies.txt  settings.py
deploy/: selflearninglm.service  setup_vm.sh
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
tests/test_api/: test_containers.py
tests/test_crawler/: test_evasion.py
tests/test_processor/: test_processor.py
(+32 files in other folders)
