[project]
name = "selflearninglm"
version = "0.1.0"
description = "Intelligent web crawler with evasion engine and data processor"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "scrapy>=2.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "typer>=0.15.0",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "trafilatura>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
selflearninglm = "backend.cli.app:app"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
